# pdf-summary

./: .gitignore  README.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/nihesh/pdfsummary/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  auth_store.dart  main.dart  theme.dart
app/lib/screens/: account.dart  doc_detail.dart  library.dart  login.dart  splash.dart
app/lib/widgets/: tesseract.dart
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  llm.py  main.py  models.py  pdf_proc.py  schemas.py  storage.py
backend/app/routes/: auth_routes.py  chat.py  documents.py
deploy/: pdf-summary-backend.service  pdf-summary.conf
docs/brainstorms/: pdf-summary-rag-requirements.md
