[project]
name = "pdf-summary-backend"
version = "0.1.0"
description = "FastAPI backend for PDF summary + RAG chat"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "pgvector==0.3.6",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pydantic[email]>=2.10.3",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "boto3==1.35.81",
    "openai==1.57.0",
    "pypdf==5.1.0",
    "google-auth==2.36.0",
    "httpx==0.28.1",
    "requests==2.32.3",
]

[tool.uv]
package = false
